--- a/entities/src/main/resources/application.properties
+++ b/entities/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/entities
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/application
 spring.datasource.username=postgres
 spring.datasource.password=5432
 spring.datasource.driver-class-name=org.postgresql.Driver
